# loom-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  PLYWATCH_PLAN.md  README.md  codecov.yml  docker-compose.local.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: ci-main.yml  ci-pr.yml  docs.yml  release.yml
.pi/skills/caveman/: SKILL.md
.pi/skills/caveman-commit/: SKILL.md
.pi/skills/caveman-help/: SKILL.md
.pi/skills/caveman-review/: SKILL.md
.pi/skills/code-architect/: SKILL.md
docs/: conf.py  etl-refactor-plan-v2.md  etl-refactor-plan.md  index.rst  overview.md  refactor-con-herencia.md  refactor-estructura-final.md  refactor-final-integrado.md  refactor-nombres-limpios.md  refactor-plan-final.md  refactor-protocolos.md  refactor-resumen-visual.md  requirements.txt
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/architecture/: clean-architecture.html  overview.html
docs/_build/html/examples-repo/: index.html
docs/_build/html/guides/: autocrud.html  fake-repo-examples.html  quickstart.html  use-case-dsl.html
docs/_static/: custom.css
docs/architecture/: clean-architecture.md  overview.md
docs/architecture/adr/: README.md
docs/etl/: examples.md  pipelines.md  testing.md
docs/examples-repo/: index.md
docs/getting-started/: etl.md  rest.md  streaming.md
docs/guides/: autocrud.md  celery.md  etl.md  fake-repo-examples.md  quickstart.md  use-case-dsl.md
docs/reference/: index.rst
docs/reference/api/: core.rst  etl.rst  repository.rst  rest.rst  streaming.rst  testing.rst
docs/rest/: autocrud.md  celery.md  examples.md  testing.md
docs/streaming/: bytewax.md
helpers/: integration_context.py
specs/feature/: docs.md  projection_loaders_agnostic_architecture.md
specs/feature/streaming/: plan_kafka.md  streaming.md
src/loom/: __init__.py
src/loom/celery/: __init__.py  auto.py  bootstrap.py  config.py  constants.py  event_loop.py  runner.py  service.py
src/loom/core/: async_bridge.py  compiler.py  observability.py  runner.py
src/loom/core/backend/: __init__.py  (+3 more)
src/loom/etl/: __init__.py  _backend_factory.py  _contract.py  _io.py  _locator.py  _predicate.py  _predicate_sql.py  _process.py  _proxy.py  _runner.py  _schema.py  _source.py  _sql.py  _step.py  _step_sql.py  _storage_config.py  _table.py  _target.py  _temp.py  _temp_store.py  _upsert.py  testing.py
src/loom/fastapi/: __init__.py  adapter.py  errors.py  rest_adapter.py
src/loom/prefect/: __init__.py  _async.py  _config.py  _ctx.py  _deploy.py  _docker_launcher.py  _etl_flow.py  _fargate_launcher.py  _flow_builder.py  _launcher.py  _launcher_config.py  _manifest.py  _manifest_s3.py  _meta.py  _observer.py  _placeholders.py  _rename_scheduled.py  _summary.py  _task_run_observer.py
src/loom/prometheus/: __init__.py  adapter.py  kafka.py  lifecycle.py  middleware.py
src/loom/rest/: __init__.py  adapter.py  autocrud.py  compiler.py  constants.py  errors.py  middleware.py  model.py  rest_adapter.py
src/loom/streaming/: __init__.py  _boundary.py  _compiler.py  _errors.py  _message.py  _partitioning.py  _process.py  _resources.py  _task.py  _with.py  testing.py
src/loom/testing/: __init__.py  golden.py  http_harness.py  in_memory.py  repository_harness.py  runner.py
tests/: conftest.py
tests/helpers/: __init__.py  integration_context.py
tests/integration/: conftest.py
tests/integration/celery_bootstrap/: test_auto_create_app_integration.py  test_bootstrap_worker.py
tests/integration/etl/: __init__.py  test_runner_integration.py  test_runtime_contracts.py
tests/integration/fake_repo/: main.py  manifest.py
tests/integration/streaming/: test_into_table_integration.py
tests/integration/support/: __init__.py  logical_repo_fixtures.py
tests/unit/: test_base.py
tests/unit/celery_bootstrap/: test_async_runtime.py  test_bootstrap.py  test_event_loop.py
tests/unit/celery_jobs/: test_auto.py  test_celery_service.py  test_config.py  test_runner.py
tests/unit/core/: test_async_bridge.py  test_compiler_contracts.py  test_runner_contracts.py
tests/unit/etl/: conftest.py  test_backend_factory.py  test_compiler.py  test_compiler_catalog.py  test_compiler_upsert.py  test_config_loader.py  test_contract.py  test_executor.py  test_format_registry.py  test_io_protocols.py  test_module_contracts.py  test_observer.py  test_observer_internals.py  test_predicate.py  test_proxy.py  test_public_api_discovery.py  test_record_schema_coverage.py  test_runner.py  test_runner_errors.py  test_schema.py  test_source.py  test_source_json.py  test_source_options.py  test_spark_testing.py  test_step.py  test_storage_config.py  test_table.py  test_target.py  test_temp.py  test_temp_cleaners.py  test_upsert.py
tests/unit/fastapi/: test_adapter.py  test_rest_adapter.py
tests/unit/prefect/: test_config.py  test_ctx.py  test_deploy.py  test_docker_launcher.py  test_etl_flow.py  test_fargate_launcher.py  test_flow_builder.py  test_launcher.py  test_launcher_config.py  test_logging_bridge.py  test_maintenance_flow.py  test_manifest.py  test_manifest_s3.py  test_notify.py  test_observer.py  test_placeholders.py  test_task_run_observer.py  test_yaml_loader.py
tests/unit/prometheus/: test_adapter.py  test_middleware.py
tests/unit/rest/: test_autocrud.py  test_fastapi_auto_logger.py  test_middleware.py  test_pydantic_adapter.py  test_response.py  test_rest_adapter.py  test_rest_compiler.py  test_rest_model.py  test_router_runtime.py
tests/unit/streaming/: __init__.py  conftest.py  test_adapter_contract.py  test_broadcast.py  test_compiler.py  test_compiler_examples.py  test_contracts.py  test_expand_routes.py  test_flow_observability.py  test_fork.py  test_otel_observability.py  test_public_api.py  test_routing.py  test_runtime_config.py  test_testing_mongo.py  test_with.py
tests/unit/testing/: test_golden.py  test_http_harness.py  test_in_memory.py  test_runner.py
(+843 files in other folders)
