[project]
name = "loom-kernel"
version = "0.4.0"
description = "Loom Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgspec>=0.18,<1.0",
    "structlog>=24.4,<26.0",
    "omegaconf>=2.3,<3.0",
    "prometheus-client>=0.20",
    "aiocache>=0.12,<1.0",
]

[project.optional-dependencies]
rest = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
    "httptools>=0.6,<1.0",
    "uvloop>=0.21,<1.0; sys_platform != 'win32'",
    "prometheus-client>=0.20",
]
sqlalchemy = [
    "sqlalchemy>=2.0,<3.0",
]
config = [
    "omegaconf>=2.3,<3.0",
    "fsspec>=2024.2.0",
]
cache = [
    "aiocache>=0.12,<1.0",
    "omegaconf>=2.3,<3.0",
]
etl-polars = [
    "polars>=1.0,<2.0",
    "deltalake>=1.5,<2.0",
    "fsspec>=2024.2.0",
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
]
etl-spark = [
    "pyspark>=3.5,<4.0",
    "delta-spark>=3.2,<4.0",
    "findspark>=2.0,<3.0",
    "fsspec>=2024.2.0",
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
]
etl-otel = [
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
]
pyspark = [
    "pyspark>=3.5,<4.0",
]
prometheus = [
    "prometheus-client>=0.20",
]
streaming = [
    "anyio>=4.0,<5.0",
    "confluent-kafka>=2.6,<3.0",
    "bytewax>=0.21",
    "uvloop>=0.21,<1.0; sys_platform != 'win32'",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
]
celery = [
    "celery>=5.3,<6.0",
    "kombu>=5.3,<6.0",
    "redis>=5.0,<6.0",
]

[project.entry-points.pytest11]
loom-spark = "loom.etl.testing.spark"

[project.entry-points."loom.etl.backends"]
polars = "loom.etl.backends.polars.provider:PolarsProvider"
spark = "loom.etl.backends.spark.provider:SparkProvider"

[build-system]
requires = [
    "hatchling>=1.24.0",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiocache>=0.12,<1.0",
    "aiosqlite>=0.20.0",
    "commitizen>=3.30.0",
    "celery>=5.3,<6.0",
    "fakeredis>=2.23.0",
    "fastapi>=0.115,<1.0",
    "greenlet>=3.0.0",
    "mypy>=1.11.0,<2.0",
    "omegaconf>=2.3,<3.0",
    "pydantic>=2.0,<3.0",
    "pre-commit>=3.8.0",
    "pyright>=1.1.390,<2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pyjwt>=2.12.0",
    "redis>=5.0.0",
    "ruff>=0.9.0,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "polars>=1.0,<2.0",
    "deltalake>=1.5,<2.0",
    "fsspec>=2024.2.0",
    "httpx>=0.28.1",
    "httptools>=0.6,<1.0",
    "uvloop>=0.21,<1.0; sys_platform != 'win32'",
    "prometheus-client>=0.20",
    "delta-spark>=3.2,<4.0",
    "chispa>=0.10,<1.0",
    "pytest-cov>=7.1.0",
    "findspark>=2.0.1",
    "confluent-kafka>=2.6,<3.0",
    "bytewax>=0.21",
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/loom",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "Exists",
    "Input",
    "Load",
    "LoadById",
    "loom.core.use_case.Exists",
    "loom.core.use_case.Input",
    "loom.core.use_case.Load",
    "loom.core.use_case.LoadById",
    "loom.core.use_case.markers.Exists",
    "loom.core.use_case.markers.Input",
    "loom.core.use_case.markers.Load",
    "loom.core.use_case.markers.LoadById",
]

[tool.pyright]
pythonVersion = "3.11"
include = [
    "src",
]
typeCheckingMode = "standard"
reportMissingModuleSource = "none"
reportMissingImports = "none"
ignore = [
    "src/loom/etl/testing/spark.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = [
    "src",
]
exclude = [
    "^tests/",
]

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "delta.*",
    "findspark",
    "fsspec.*",
    "chispa.*",
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests/unit",
    "tests/integration",
]
pythonpath = [
    "src",
]
addopts = "-ra --log-disable=aiosqlite"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(name)s %(message)s"
markers = [
    "bytewax: tests that exercise the Bytewax adapter and runtime wiring",
    "kafka: tests that exercise Kafka transport and codecs",
    "integration: end-to-end streaming flow tests",
    "slow: long-running tests that should be opt-in in CI",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:project.version",
]
update_changelog_on_bump = true

[tool.semantic_branch]
prerelease = [
    "hotfix/.*",
    "feature/.*",
    "feat/.*",
    "multifeature/.*",
    "breaking/.*",
    "fix/.*",
]
patch = [
    "hotfix/.*",
    "fix/.*",
]
minor = [
    "feature/.*",
    "feat/.*",
    "multifeature/.*",
]
major = [
    "breaking/.*",
]
prerelease_ignore = [
    "docs/.*",
]
release_ignore = [
    "wip/.*",
    "docs/.*",
    "chore/.*",
]
